# ofono-wizard

./: Makefile.am  NEWS  configure.ac
po/: POTFILES.in
src/: Makefile.am  main.c  mobile-provider.c  mobile-provider.h  ofono-connman.xml  ofono-context.xml  ofono-manager.xml  ofono-modem.xml  ofono-sim.xml  ofono-wizard.c  ofono-wizard.h
